# vue3-admin-server

./: .env  Cargo.toml  readme.md
src/: main.rs
src/admin_server/: admin_routes.rs  mod.rs
src/common/: mod.rs
